# exchange-matching-engine

./: Cargo.toml  LICENSE  README.md  operations.csv  orders.csv
data_generator/: data_generator.rs
src/: engine.rs  lib.rs  logging.rs  main.rs  order.rs  orderbook.rs  simulation.rs  trade.rs  utils.rs
src/logging/: logger_trait.rs  mod.rs  types.rs  utils.rs
src/logging/log_methods/: async_closure.rs  async_enum.rs  async_string.rs  buffered_file.rs  mod.rs  naive_file_write.rs  no_logging.rs  println.rs  tracing_logger.rs
tests/: matching_engine.rs
