[package]
name = "exchange-matching-engine"
version = "0.1.0"
edition = "2024"
default-run = "exchange-matching-engine"

[dependencies]
chrono = "0.4.42"
csv = "1.3.1"
rand = "0.9.2"
rust_decimal = "1.38.0"
rust_decimal_macros = "1.38.0"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
